Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjObjTextObjRetInteger.quorum
class Main
    action Main
        Yoda<Integer, Integer, Text> yoda
        Text y = yoda:useForce(66, 66)
        output "passed"
     end
end
