Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriTextObjRetIntegerFail.quorum
class Main
    action Main
        Yoda<Integer, Integer, Text> yoda
        boolean y = yoda(66, 66, true)
     end
end
